--- a/base_app/templates/base_app/links.html
+++ b/base_app/templates/base_app/links.html
@@ -1,10 +1,16 @@
 <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="">Start</a>
+            <a class="nav-link" href="{% url 'add_driver' %}">Add driver</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="">Sample link</a>
+            <a class="nav-link" href="{% url 'driver_list' %}">Driver's list</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'add_truck' %}">Add truck</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'truck_list' %}">Truck's list</a>
         </li>
     </ul>
 </div>
