--- a/arcana_app/templates/arcana_app/driver_list.html
+++ b/arcana_app/templates/arcana_app/driver_list.html
@@ -3,25 +3,39 @@
     <style>
         .center-div {
             display: flex;
+            background: rgba(255, 255, 255, .8);
+            border-radius: 5px;
             justify-content: center;
             margin-top: 100px;
         }
 
-        .table-hover {
-            width: 350px;
-            padding: 20px;
-            margin: 20px;
-            border-radius: 10px;
+        a {
+            text-decoration: none;
+            {#color: white;#}
+        }
+
+        a:hover {
+            text-decoration: none;
             color: black;
+        }
+
+        .table-hover {
+            {#width: 300px;#}
+            {#background: rgba(100, 100, 100, .8);#}
+            padding: 50px;
+            margin: 20px;
+        {#border-radius: 10px;#} color: white;
             font-weight: bold;
             font-size: larger;
         }
+
     </style>
     <div class="center-div">
         <table class="table table-hover">
             {% for obj in object_list %}
                 <tr>
-                    <td>{{ obj }}</td>
+                    <td><a href="{% url 'detail_driver' obj.id %}">{{ obj }}</a></td>
+                    {#                class="btn btn-outline-light"#}
                 </tr>
             {% endfor %}
         </table>
