SMS notification upgraded

--- a/base_app/templates/base_app/base.html
+++ b/base_app/templates/base_app/base.html
@@ -40,6 +40,9 @@
     .block-content {
         display: flex;
         justify-content: center;
+        {#ponizej super ustawienie, żeby flex dodawał po spodem a nie obok#}
+        flex-direction: column;
+        align-items: center;
     }
 
 </style>
