--- a/base_app/templates/base_app/links.html
+++ b/base_app/templates/base_app/links.html
@@ -12,5 +12,8 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'truck_list' %}">Truck's list</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'add_insurance' %}">Add insurance</a>
+        </li>
     </ul>
 </div>
