--- a/arcana_app/templates/arcana_app/driver_list.html
+++ b/arcana_app/templates/arcana_app/driver_list.html
@@ -11,7 +11,7 @@
 
         a {
             text-decoration: none;
-            {#color: white;#}
+            color: cadetblue;
         }
 
         a:hover {
@@ -20,24 +20,77 @@
         }
 
         .table-hover {
-            {#width: 300px;#}
-            {#background: rgba(100, 100, 100, .8);#}
-            padding: 50px;
+            width: 300px;
+        {#background: rgba(100, 100, 100, .8);#} padding: 50px;
             margin: 20px;
-        {#border-radius: 10px;#} color: white;
+            border-radius: 10px;
+            color: white;
             font-weight: bold;
             font-size: larger;
         }
 
+        .center-pagination {
+            margin-top: 10px;
+        }
+
+
     </style>
     <div class="center-div">
         <table class="table table-hover">
-            {% for obj in object_list %}
+            {#        poniżej zamiast object_list używam page_obj. Robi sie tak, żeby działała paginacja#}
+            {% for obj in page_obj %}
                 <tr>
                     <td><a href="{% url 'detail_driver' obj.id %}">{{ obj }}</a></td>
-                    {#                class="btn btn-outline-light"#}
+                    {#                    class="btn btn-outline-light"#}
                 </tr>
             {% endfor %}
         </table>
     </div>
+
+    <nav aria-label="Page navigation example" class="center-pagination">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                       tabindex="-1">Previous</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Previous</a>
+                </li>
+            {% endif %}
+
+            <li class="page-item"><a class="page-link" href="#">{{ page_obj.number }}</a></li>
+
+            <li class="page-item">
+                {% if page_obj.has_next %}
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#">Next</a>
+                    </li>
+                {% endif %}
+        </ul>
+    </nav>
+
+
 {% endblock %}
+
+{##}
+{#<div class="pagination">#}
+{#    <span class="step-links">#}
+{#        {% if page_obj.has_previous %}#}
+{#            <a href="?page=1">&laquo; first</a>#}
+{#            <a href="?page={{ page_obj.previous_page_number }}">previous</a>#}
+{#        {% endif %}#}
+{##}
+{#        <span class="current">#}
+{#            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.#}
+{#        </span>#}
+{##}
+{#        {% if page_obj.has_next %}#}
+{#            <a href="?page={{ page_obj.next_page_number }}">next</a>#}
+{#            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>#}
+{#        {% endif %}#}
+{#    </span>#}
+{#</div>#}
