--- a/base_app/templates/base_app/top_navbar.html
+++ b/base_app/templates/base_app/top_navbar.html
@@ -1,8 +1,11 @@
 <style>
-    nav {
+    #custom_navbar {
         margin-top: 10px;
         font-size: large;
         font-weight: bold;
+        background: rgb(0, 212, 255);
+        background: linear-gradient(90deg, rgba(0, 212, 255, 1) 0%, rgba(9, 9, 121, 1) 48%, rgba(0, 0, 0, 1) 100%);
+        {#box-shadow: 5px 5px 10px 0 white inset, -5px -5px 10px 0 white;#}
     }
 
     .navbar.navbar-expand.navbar-dark li a {
@@ -14,14 +17,16 @@
         color: lightblue;
     }
 </style>
-<nav class="navbar navbar-expand navbar-dark" style="background-color: rgba(102,102,102,.4);">
+{#background-color: rgba(102,102,102,.4)#}
+<nav id="custom_navbar" class="navbar navbar-expand navbar-dark" style="background: rgb(192,227,235);
+        background: linear-gradient(90deg, rgba(72,105,73, .4) 0%, rgba(14,14,129, .4) 48%, rgba(0, 0, 0, .4) 100%);">
     <div class="collapse navbar-collapse">
         {% include 'base_app/links.html' %}
-{#        <form class="form-inline">#}
-{#            {% csrf_token %}#}
-{#            <input class="form-control mr-sm-2" type="search" placeholder="Szukaj na stronie" aria-label="Search">#}
-{#            <button class="btn btn-outline-light" type="submit">Szukaj</button>#}
-{#        </form>#}
+        {#        <form class="form-inline">#}
+        {#            {% csrf_token %}#}
+        {#            <input class="form-control mr-sm-2" type="search" placeholder="Szukaj na stronie" aria-label="Search">#}
+        {#            <button class="btn btn-outline-light" type="submit">Szukaj</button>#}
+        {#        </form>#}
 
 
         {% include 'accounts/login_panel_to_navbar.html' %}
