--- a/accounts/templates/accounts/login_panel_to_navbar.html
+++ b/accounts/templates/accounts/login_panel_to_navbar.html
@@ -2,17 +2,17 @@
     <ul class="navbar-nav">
         {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'my_account' %}">Moje konto</a>
+                <a class="nav-link" href="{% url 'my_account' %}">My account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Wyloguj</a>
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
         {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Zaloguj</a>
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'create_user' %}">Zarejestruj</a>
+                <a class="nav-link" href="{% url 'create_user' %}">Register</a>
             </li>
         {% endif %}
     </ul>
