--- a/arcana_app/templates/arcana_app/truck_detail.html
+++ b/arcana_app/templates/arcana_app/truck_detail.html
@@ -24,6 +24,7 @@
                 <td>begin_MOT</td>
                 <td>expire_MOT</td>
                 <td>is_actual_mot</td>
+                <td>insurance</td>
                 <td></td>
                 <td></td>
             </tr>
@@ -41,6 +42,7 @@
                 <td>{{ object.begin_MOT }}</td>
                 <td>{{ object.expire_MOT }}</td>
                 <td>{{ is_actual_mot }}</td>
+                <td>{{ object.insurance }}</td>
                 <td><a class="btn btn-outline-secondary" href="{% url 'update_truck' object.id %}">Edit</a></td>
                 <td><a class="btn btn-outline-secondary" href="{% url 'delete_truck' object.id %}">Delete</a></td>
             </tr>
