--- a/base_app/templates/base_app/form.html
+++ b/base_app/templates/base_app/form.html
@@ -14,7 +14,7 @@
 </style>
 
 <div class="container ">
-    <form class="form-group" method="POST">
+    <form class="form-group" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="{{ submit_value_text }}">
