--- a/base_app/templates/base_app/links.html
+++ b/base_app/templates/base_app/links.html
@@ -15,5 +15,8 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'add_insurance' %}">Add insurance</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'add_freight' %}">Add freight</a>
+        </li>
     </ul>
 </div>
