--- a/base_app/templates/base_app/links.html
+++ b/base_app/templates/base_app/links.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'add_freight' %}">Add freight</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'freight_list' %}">Freights</a>
+        </li>
     </ul>
 </div>
 <!--
